# mlir-dsp

./: CMakeLists.txt  README.md  main.cpp
include/mlir-dsp/: CMakeLists.txt  DSP.h  DSP.td  DSPDialect.h  DSPDialect.td  DSPOps.td  DSPPasses.h  DSPPasses.td  cu_fft1d.cu
lib/: CMakeLists.txt
lib/Dialect/: CMakeLists.txt
lib/Dialect/dsp/: CMakeLists.txt  DSPOps.cpp
lib/Transforms/: CMakeLists.txt  DSPPasses.cpp  LowerFFT2GPU.cpp
test/: CMakeLists.txt  lower_tensor.sh  lowering.sh  main.cpp  mlir.h  o.ll  test_padding  toCF.mlir  toLoops.mlir  toMemref.mlir
test/ex_basic/: basic.h  basic.mlir  build_ex_basic.sh  ex1_main.cpp  ex_basic_run  lowering_basic.sh  s1.mlir
test/ex_buffer_reuse/: 0.baseline  0.baseline_naive  0.baseline_opt  0.original.mlir  1.buffer_reuse  1.bufferization.mlir  baseline.cpp  baseline_naive.cpp  baseline_opt.cpp  build.sh  ex_main.cpp  lowering.sh  massif.0.baseline.3725382  massif.0.baseline_naive.3725381  massif.0.baseline_opt.3725383  massif.1.buffer_reuse.3725395  mlir_runtime.cpp  profile.sh  tensor_padding.h  toCF.mlir  toLLVM.ll  toLLVM.mlir  toLoops.mlir
test/ex_fft/ex_cpu_fft/: bufferized.mlir  build.sh  fft.ll  fft_runner  fft_runner.cpp  llvm.mlir  loops.mlir  lower_fft.sh  tosa_fft.mlir  tosa_to_linalg.mlir
test/ex_fft/ex_gpu_fft/: build_mlir_runner.sh  fft_mlir_runner  fft_mlir_runner_v2.cpp  gpu.ll  gpu.ptx  gpu_affine.mlir  gpu_bufferized.mlir  gpu_host_lowered.mlir  gpu_mapped.mlir  gpu_math_expanded.mlir  gpu_nvvm.mlir  gpu_outlined.mlir  gpu_with_binary.mlir  gpu_with_target.mlir  lower_fft_gpu.sh
test/ex_fft/ex_iree/: lowering_iree.sh  tosa_fft.mlir
test/ex_fft/ex_sine/: lower_math_sin_gpu.sh  sin_nvvm_manual.mlir  sin_step1.mlir  sin_step2_llvm.mlir  sin_step2_poly.mlir  test_math_sin_gpu.mlir
test/ex_gemm/: 1_tiled.mlir  2_gpu_mapped.mlir  3_outlined.mlir  gemm_gpu.mlir  hlp  lowering_gemm.sh  lowering_to_gpu.sh  naive_gemm.mlir  toMemref.mlir
test/ex_padding1d/: build_ex_padding1d.sh  ex2_main.cpp  ex_padding1d_run  lower_tensor.sh  tensor_padding.h  tensor_padding.mlir  toBeforeBufferizeMemref.mlir  toLLVM.ll  toLLVM.mlir
test/ex_pipeline/: 0.baseline_cuda  0.baseline_cuda.cpp  1.bufferization.mlir  build.sh  lowering.sh  pipeline.mlir  profile.sh  toCF.mlir  toLLVM.ll  toLLVM.mlir  toLoops.mlir
